--- a/src/main/resources/static/css/styles.css
+++ b/src/main/resources/static/css/styles.css
@@ -1,5 +1,27 @@
 *{
+    margin: 0;
+    padding: 0;
+    font-family: sans-serif;
+}
 
+:root {
+  --color-primario: #1976D2;
+  --color-secundario: #BBDEFB;
+  --color-acento:#607D8B;
+  --color-fondo-claro: #FFFFFF;
+  --color-fondo-oscuro:#757575;
+  --color-texto-claro: #333333;
+  --color-texto-oscuro:#FFFFFF;
+}
+
+a{
+    text-decoration: none;
+    color: var(--color-texto-oscuro);
+}
+
+img{
+    height: 100%;
+    width: auto;
 }
 
 body{
@@ -7,17 +29,122 @@ body{
 }
 
 header{
+    height: 10vh;
+    background-color: var(--color-primario);
 
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 nav{
+    height: 100%;
+    width: auto;
 
+    padding: 2vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
 }
 
-main{
+.navitem{
+    height: 100%;
+    width: auto;
+    margin-left: 2vh;
+    margin-right: 2vh;
 
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
-.container{
-    
+.navitem img{
+    height: 100%;
+}
+
+main {
+  display: flex;
+  flex-direction: row;
+  align-items: stretch;
+  justify-content: center;
+  background-color: var(--color-secundario);
+  gap: 2%;
+  padding: 1rem;
+}
+
+.aside {
+  width: 20%;
+  background-color: var(--color-secundario);
+
+  display: flex;
+  justify-content: center;
+}
+
+.newnote{
+    height: 15vh;
+    width: auto;
+}
+
+.container {
+  width: 60%;
+  background-color: var(--color-acento);
+  border-radius: 2vh;
+  padding: 1rem;
+}
+
+.note{
+    margin: 5vh;
+    padding: 3vh;
+    background-color: var(--color-primario) ;
+    border-radius: 2vh;
+    color: white;
+
+}
+.notetitle{
+    height: 5vh;
+    border-radius: 2vh;
+    border: outset;
+    border-color: var(--color-secundario);
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+}
+
+.notecontent{
+    margin-top: 2vh;
+    padding: 2vh;
+    border-radius: 2vh;
+    border-style: outset;
+    border-color: var(--color-secundario);
+}
+
+.notebottom{
+    height: 5vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    margin-top: 2vh;
+}
+
+.notetaggs{
+    padding: 2vh;
+    width: 50%;
+}
+.noteoptions{
+    display: flex;
+    justify-content: flex-end;
+    align-content: center;
+    width: 50%;
+}
+
+.option{
+    margin-left: 2vh;
+}
+
+footer{
+    height: 20vh;
+    background-color: var(--color-primario);
+
 }
