--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -94,7 +94,7 @@ main {
     width: 100%;
     height: 100%;
     overflow: auto;
-    background-color: rgba(0,0,0,0.5); /* Fondo negro semitransparente */
+    background-color: rgba(0,0,0,0.5);
   }
 
   /* Contenedor de la ventana flotante */
@@ -136,6 +136,7 @@ main {
     color: white;
 
 }
+
 .notetitle{
     height: 5vh;
     border-radius: 2vh;
