--- a/src/main/resources/static/new.css
+++ b/src/main/resources/static/new.css
@@ -284,3 +284,14 @@ main.auth-wrapper {
   color: var(--color-texto);
   margin-top: 1rem;
 }
+
+.etiqueta-input {
+  width: 100%;
+  padding: 0.4rem 0.6rem;
+  font-size: 0.85rem;
+  line-height: 1.2;
+  border-radius: 0.4rem;
+  border: 1px solid var(--color-borde);
+  background-color: var(--color-secundario);
+  color: var(--color-texto);
+}
