--- a/src/main/resources/static/new.css
+++ b/src/main/resources/static/new.css
@@ -350,3 +350,20 @@ main.auth-wrapper {
 .dropdown-menu button:hover {
   background-color: var(--color-secundario);
 }
+
+.auth-switch {
+  text-align: center;
+  margin-top: 1rem;
+  font-size: 0.95rem;
+  color: var(--color-texto);
+}
+
+.auth-switch a {
+  color: var(--color-acento);
+  text-decoration: none;
+  font-weight: 500;
+}
+
+.auth-switch a:hover {
+  text-decoration: underline;
+}
